crates/ralf-tui/src/snapshots/ralf_tui__snapshot_tests__shell_context_focus.snap
---
source: crates/ralf-tui/src/lib.rs
expression: result
---
● No Thread │ "Select a thread to start"
┏ Models ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌──────────────────────────────────────────────────────────────────────────────┐
│> _                                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
Canvas │ Canvas                      [j/k] scroll │ [y] copy │ [Tab] focus
