crates/ralf-tui/src/snapshots/ralf_tui__snapshot_tests__shell_split_mode.snap
---
source: crates/ralf-tui/src/lib.rs
expression: result
---
● No Thread │ "Select a thread to start"
┌ Timeline ────────────────────┐╭ Models ──────────────────────────────────────╮
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│  No events yet               ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
└──────────────────────────────┘╰──────────────────────────────────────────────╯
┌──────────────────────────────────────────────────────────────────────────────┐
│> _                                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
Split │ Timeline      [j/k] scroll │ [y] copy │ [\] canvas │ [Tab] focus
