crates/ralf-tui/src/snapshots/ralf_tui__snapshot_tests__shell_timeline_focus.snap
---
source: crates/ralf-tui/src/lib.rs
expression: result
---
● No Thread │ "Select a thread to start"
┌ Conversation ────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│  No events yet                                                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│──────────────────────────────────────────────────────────────────────────────│
│> _                                                                           │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[j/k] Navigate │ [Enter] Toggle │ [y] Copy │ [Tab] Focus │ [1/2/3] Modes │ [?] H
